--- a/stylesheets/scss/_search.scss
+++ b/stylesheets/scss/_search.scss
@@ -15,6 +15,13 @@
   line-height: 1em;
   @include bg($white);
 
+  @include querymin($tablet-2) {
+
+    .front-page & {
+      margin-left: 9px;
+    }
+  }
+
   @include query($tablet-2) {
     position: absolute;
     margin-left: 0;
@@ -120,6 +127,13 @@
   }
   &::-moz-placeholder {
     text-overflow: ellipsis;
+  }
+
+  @include querymin($tablet-2) {
+
+    .front-page & {
+      padding: 6px 30px 5px 12px;
+    }
   }
 
   @include query($mobile-1) {
